Mise en place de la search bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <input type="text" placeholder="Rechercher un film..." class="search-input" />
+    <input type="text" placeholder="Rechercher un film..." class="search-input" id="search-bar" />
     <button class="search-button">Rechercher</button>
 
     <h2>Ou choisir un genre</h2>
